fix: prevent video overflow

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -153,7 +153,8 @@ h2 {
 	gap: 1em;
 }
 
-.event-grid img {
+.event-grid img,
+.event-grid video {
 	width: 100%;
 	max-width: 90vw;
 	border-radius: 5px;
